--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -10,6 +10,9 @@
     @include desktop {
         padding-top: 0;
     }
+    @include phones {
+        flex-direction: column;
+    }
 }
 
 .about__avatar {
@@ -31,6 +34,10 @@
     @include tablets {
         width: 35%;
     }
+    @include phones {
+        width: 100%;
+        margin-bottom: 35px;
+    }
 }
 
 .about__desc {
@@ -41,6 +48,15 @@
     }
     @include tablets {
         padding-right: 0;
+    }
+    @include phones {
+        width: 100%;
+    }
+}
+
+.about__information {
+    @include phonesmax {
+        width: 100%;
     }
 }
 
@@ -88,8 +104,14 @@
 
 .about__salute {
     margin-bottom: 22px;
+    @include phones {
+        margin-bottom: 10px;
+    }
 }
 
 .about__work {
     margin-bottom: 86px;
+    @include phones {
+        margin-bottom: 32px;
+    }
 }
