--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -14,6 +14,10 @@
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 50px;
+    @include phones {
+        font-size: 24px;
+        margin-bottom: 82px;
+    }
 }
 
 .information__slider {
@@ -21,6 +25,9 @@
     position: relative;
     @include tablets {
         padding-left: 48px;
+    }
+    @include phones {
+        padding-left: 0;
     }
 }
 
@@ -47,6 +54,10 @@
     }
     @include tablets {
         left: 53%;
+    }
+    @include phones {
+        left: 34%;
+        top: -29%;
     }
 }
 
@@ -77,6 +88,11 @@
     @include tablets {
         margin-right: 80px;
         width: 50%;
+    }
+    @include phones {
+        margin-right: 0px;
+        width: 100%;
+        height: 224px;
     }
 }
 
