--- a/src/styles/blocks/skills-row-vue.pcss
+++ b/src/styles/blocks/skills-row-vue.pcss
@@ -8,12 +8,8 @@
 .skills-row__list {
     display: flex;
     flex-wrap: wrap;
-    /*margin-left: -4%;
-    @include phones {
+    @include phonesmax {
       justify-content: center;
-    }*/
+      width: 237px;
+    }
 }
-  
-/*.skills-row__item {
-    margin-left: 4%;
-}*/
