--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -95,7 +95,7 @@
         font-size: 36%;
         margin-top: 62%;
     }
-    @include phones {
+    @include phonesmax {
         margin-top: 95%;
     }
 }
