--- a/src/pages/information.pug
+++ b/src/pages/information.pug
@@ -1,14 +1,13 @@
-script(type="text/x-template")
 section.information#information-section
   .container.information__container
     h2.information__title Что обо мне говорят
     .information__slider
       .information__button.slider-button--information
-        button(@click="previous()" type="button" aria-label="предыдущий отзыв").slider-button__btn--information
+        button(type="button" aria-label="предыдущий отзыв").slider-button__btn--information
           +icon("arrow-down", "btn__information btn__prev--information")             
-        button(@click="next()" type="button" aria-label="следующий слайд").slider-button__btn--information
+        button(type="button" aria-label="следующий слайд").slider-button__btn--information
           +icon("arrow-down", "btn__information btn__next--information")
-      ul(ref="flickity" :options="flickityOptions").information__list
+      ul.information__list
         li.information__item
           +icon('quote', 'information__quote')
           .information__block
