Добавила параллакс и Flickity

--- a/src/pages/header.pug
+++ b/src/pages/header.pug
@@ -4,6 +4,7 @@ header.header
             .logo ЕК
           .header__menu
             include ./menu.pug
+            include ./hamburger-menu.pug
           .header__socials 
             include ./socials.pug
             +socials("header")
