Правки из-за разности отображения на сервере и gitPages

--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -10,7 +10,7 @@
     @include desktop {
         padding-top: 0;
     }
-    @include phones {
+    @include phonesmax {
         flex-direction: column;
     }
 }
@@ -34,7 +34,7 @@
     @include tablets {
         width: 35%;
     }
-    @include phones {
+    @include phonesmax {
         width: 100%;
         margin-bottom: 35px;
     }
@@ -49,7 +49,7 @@
     @include tablets {
         padding-right: 0;
     }
-    @include phones {
+    @include phonesmax {
         width: 100%;
     }
 }
@@ -104,14 +104,14 @@
 
 .about__salute {
     margin-bottom: 22px;
-    @include phones {
+    @include phonesmax {
         margin-bottom: 10px;
     }
 }
 
 .about__work {
     margin-bottom: 86px;
-    @include phones {
+    @include phonesmax {
         margin-bottom: 32px;
     }
 }
