--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
     justify-content: center;
-    @include phones {
+    @include phonesmax {
         height: 100%;
         min-width: 318px;
     }
@@ -92,11 +92,12 @@
         font-size: 48px;
     }
     @include phones {
-        font-size: 36%;
+        font-size: 36px;
         margin-top: 62%;
     }
     @include phonesmax {
         margin-top: 95%;
+        font-size: 36px;
     }
 }
 
