--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -13,7 +13,7 @@
 
 .form__row {
     display: flex;
-    @include phones {
+    @include phonesmax {
         flex-direction: column;
     }
 }
@@ -27,7 +27,7 @@
     &:last-child {
         margin-right: 0;
     }
-    @include phones {
+    @include phonesmax {
         margin-right: 0px;
         margin-bottom: 31px;
         &:last-child {
