--- a/src/styles/blocks/information.pcss
+++ b/src/styles/blocks/information.pcss
@@ -14,7 +14,7 @@
     font-weight: 700;
     line-height: 48px;
     margin-bottom: 50px;
-    @include phones {
+    @include phonesmax {
         font-size: 24px;
         margin-bottom: 82px;
     }
@@ -26,7 +26,7 @@
     @include tablets {
         padding-left: 48px;
     }
-    @include phones {
+    @include phonesmax {
         padding-left: 0;
     }
 }
@@ -55,7 +55,7 @@
     @include tablets {
         left: 53%;
     }
-    @include phones {
+    @include phonesmax {
         left: 34%;
         top: -29%;
     }
@@ -89,7 +89,7 @@
         margin-right: 80px;
         width: 50%;
     }
-    @include phones {
+    @include phonesmax {
         margin-right: 0px;
         width: 100%;
         height: 224px;
