--- a/src/styles/blocks/mail.pcss
+++ b/src/styles/blocks/mail.pcss
@@ -13,7 +13,7 @@
     @include desktop {
         padding-left: 0;
     }
-    @include phones {
+    @include phonesmax {
         padding-top: 22%;
     }
 }
@@ -31,5 +31,6 @@
     }
     @include phonesmax {
         text-align: left;
+        font-size: 24px;
     }
 }
