--- a/src/styles/blocks/mywork.pcss
+++ b/src/styles/blocks/mywork.pcss
@@ -81,7 +81,7 @@
         top: -142%;
         font-size: 336px;
     }
-    @include phones {
+    @include phonesmax {
         display: none;
     }
 }
