--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -10,7 +10,7 @@
     @include tablets {
         padding: 32px 0;
     }
-    @include phones {
+    @include phonesmax {
         flex-direction: column;
     }
 }
@@ -31,7 +31,7 @@
     @include desktop {
         width: 70%;
     }
-    @include phones {
+    @include phonesmax {
         width: 100%;
     }
 }
@@ -58,7 +58,7 @@
       margin-right: 16px;
       flex-direction: column; 
     }
-    @include phones {
+    @include phonesmax {
         margin-right: 0px;
         width: 100%;
         margin-bottom: 32px;
@@ -69,7 +69,7 @@
     @include desktop {
         padding-right: 21%;
     }
-    @include phones {
+    @include phonesmax {
         padding-right: 0px;
     }
 }
@@ -108,7 +108,7 @@
         margin-right: 0;
         margin-bottom: 42px;
     }
-    @include phones {
+    @include phonesmax {
         padding-right: 3px;
     }
 }
@@ -173,7 +173,7 @@
 
 .socials__footer {
     width: 67%;
-    @include phones {
+    @include phonesmax {
         width: 73%;
     }
 }
