--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -3,10 +3,10 @@
     align-items: center;
     justify-content: center;
     color: white;
-    justify-content: space-between;
-    min-height: 650px;
-    z-index: 20;
-    padding-top: 79px;
+    min-height: 394px;
+    z-index: 55;
+    padding-top: 32px;
+    padding-left: 10%;
     @include desktop {
         padding-top: 0;
     }
@@ -42,7 +42,7 @@
 
 .about__desc {
     width: 60%;
-    padding-right: 26%;
+    padding-right: 21%;
     @include desktop {
         padding-right: 10%;
     }
