--- a/src/styles/blocks/developer.pcss
+++ b/src/styles/blocks/developer.pcss
@@ -1,11 +1,6 @@
 .developer {
     height: 100vh;
     min-width: 650px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    justify-content: center;
     @include phonesmax {
         height: 100%;
         min-width: 318px;
@@ -15,14 +10,12 @@
 .developer__container {
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
 .developer__content {
-    padding-top: 355px;
-    margin-bottom: 240px;
-    margin-top: 150px;
+    margin-bottom: 17%;
+    margin-top: 22%;
     display: flex;
     position: relative;
     z-index: 11;
