Правка параллакса у Welcome-section

--- a/src/pages/parallax-welcome.pug
+++ b/src/pages/parallax-welcome.pug
@@ -1,5 +1,5 @@
 .parallax-welcome
-    .parallax-welcome__element(data-speed="0.1")
+    .parallax-welcome__element
         +image("content/sky.png", "parallax__image", "", "presentation")
     .parallax-welcome__element(data-speed="0.25")
         +image("content/mountains.png", "parallax__image", "", "presentation")
