--- a/src/styles/blocks/parallax-welcome.pcss
+++ b/src/styles/blocks/parallax-welcome.pcss
@@ -21,6 +21,8 @@
     &:nth-child(1) {
         .parallax__image {
             object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 
@@ -28,6 +30,9 @@
         .parallax__image {
             right: 0;
             top: 329px;
+            object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 
@@ -35,6 +40,9 @@
         .parallax__image {
             right: 0;
             top: 444px;
+            object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 
@@ -42,6 +50,9 @@
         .parallax__image {
             right: 0;
             top: 846px;
+            object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 
@@ -49,6 +60,9 @@
         .parallax__image {
             right: 0;
             top: 668px;
+            object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 
@@ -56,6 +70,9 @@
         .parallax__image {
             right: 0;
             bottom: -590px;
+            object-fit: cover;
+            width: 100%;
+            height: 50%;
         }
     }
 }
