--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -28,10 +28,17 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
+    @include tablets {
+        display: none;
+    }
 }
 
 .header__socials {
     width: 10%;
+    @include tablets {
+        width: 20%;
+        margin-right: 14%;
+    }
     @include phonesmax {
         display: none;
     }
