--- a/src/styles/blocks/welcome-section.pcss
+++ b/src/styles/blocks/welcome-section.pcss
@@ -3,7 +3,10 @@
     background-color: #1c2023;
     height: 1451px;
     width: 100%;
+    @include tablets {
+        height: 1400px;
+    }
     @include phonesmax {
-        height: 1467px;
+        height: 1600px;
     }
 }
